2007-03-29  Keith Seitz  <keiths@redhat.com>

	* gnu/classpath/jdwp/event/ThreadStartEvent.java (Event):
	Event type is "THREAD_START" not "THERAD_END".

	* gnu/classpath/jdwp/transport/SocketTransport.java (ITransport):
	Handle configure strings ":port" and "port".

2007-03-29  Francis Kung  <fkung@redhat.com>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c
	(Java_gnu_java_awt_peer_gtk_GtkToolkit_gtkInit): Revert last patch.

2007-03-29  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-nio/Makefile.am (LIBADD): Add libclasspathnative.

2007-03-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/StandardMBean.java:
	(setAttribute(Attribute)): Add handling of primitive
	types and subtype parameters.
	(getMutator(String,Class<?>)): New helper method to
	return the mutator.
	
2007-03-28  Roman Kennke  <roman@kennke.org>

	* java/io/OutputStreamWriter.java,
	* java/io/InputStreamReader.java: Revert big stream patch due to
	problems.

2007-03-28  Tom Tromey  <tromey@redhat.com>

	PR classpath/31303:
	* external/sax/org/xml/sax/helpers/XMLReaderFactory.java
	(createXMLReader): Code in Classpath default.

2007-03-28  Tom Tromey  <tromey@redhat.com>

	PR classpath/31276:
	* native/jni/java-lang/java_lang_VMDouble.c
	(parseDoubleFromChars): Use %p, not %i.

2007-03-28  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-nio/Makefile.am (LIBADD): Don't add
	libclasspathnative.
	* native/jni/java-nio/gnu_java_nio_VMChannel.c
	(Java_gnu_java_nio_VMChannel_open): Don't set and reset umask.

2007-03-27  Francis Kung  <fkung@redhat.com>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c
	(Java_gnu_java_awt_peer_gtk_GtkToolkit_gtkInit): Prevent loading of
	accessibility modules as temporary workaround for Gnome bug.

2007-03-27  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpth/jdwp/processor/ThreadReferenceCommandSet.java
	(executeResume): Change to call VMVirtualMachine.resumeThread. 

2007-03-27  Roman Kennke  <roman@kennke.org>
